--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,21 @@
     "prisma-binding": "2.1.6",
     "stripe": "^6.12.1"
   },
+  "devDependencies": {
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "casual": "^1.5.19",
+    "enzyme-to-json": "^3.3.4",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "graphql-tools": "^4.0.0",
+    "jest": "^23.6.0",
+    "jest-transform-graphql": "^2.1.0"
+  },
   "license": "MIT",
   "repository": {
     "url": "wesbos.com"
